<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/fragmentContainer"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <LinearLayout
            android:id="@+id/homePanel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >


        <org.losyc.android.flipcopy.util.FontIconButton
                android:id="@+id/topbar_home"
                android:textColor="@color/grey"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:textSize="24sp"
                android:text="@string/ficon_home" />
        <org.losyc.android.flipcopy.util.FontIconButton
                android:id="@+id/topbar_having"
                android:textColor="@color/grey"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:textSize="24sp"
                android:text="@string/ficon_having" />

        <org.losyc.android.flipcopy.util.FontIconButton
                android:id="@+id/topbar_search"
                android:textColor="@color/grey"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:textSize="24sp"
                android:text="@string/ficon_search" />
        <org.losyc.android.flipcopy.util.FontIconButton
                android:id="@+id/topbar_warn"
                android:textColor="@color/grey"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:textSize="24sp"
                android:text="@string/ficon_warn" />
        <org.losyc.android.flipcopy.util.FontIconButton
                android:id="@+id/topbar_person"
                android:textColor="@color/grey"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:textSize="24sp"
                android:text="@string/ficon_person" />


    </LinearLayout>

    <android.support.v4.view.ViewPager
            android:id="@+id/homeViewPagerContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
</LinearLayout>