<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:losyc="http://schemas.android.com/apk/res-auto"
              android:id="@+id/fragmentContainer"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <LinearLayout
            android:id="@+id/havingPanel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

        <org.losyc.android.flipcopy.util.TopTabView
                android:id="@+id/topbar_alling"
                android:textColor="@color/grey"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="45dp"
                losyc:fontIcon="@string/ficon_alling"
                losyc:fontIconSize="26sp"
                losyc:color="@color/red" />
        <org.losyc.android.flipcopy.util.TopTabView
                android:id="@+id/topbar_user"
                android:textColor="@color/grey"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="45dp"
                losyc:fontIcon="@string/ficon_user"
                losyc:fontIconSize="26sp"
                losyc:color="@color/red" />
        <org.losyc.android.flipcopy.util.TopTabView
                android:id="@+id/topbar_account"
                android:textColor="@color/grey"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="45dp"
                losyc:fontIcon="@string/ficon_account"
                losyc:fontIconSize="26sp"
                losyc:color="@color/red" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
            android:id="@+id/havingViewPagerContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
</LinearLayout>